Changed media, links, and fixed calendar/events

--- a/data/announcement.yml
+++ b/data/announcement.yml
@@ -1,5 +1,6 @@
 items:
     # Ordered by recency descending; Largest number = most recent
+    # TODO: Update Website Launch Date
   - title: Website Launch
     date: 08/13/2022
     description: Today, we launch our official club website! Any announcements, events, or anything regarding the club can be addressed here. Visit our contact page if you have questions!
