--- a/data/via.yml
+++ b/data/via.yml
@@ -3,6 +3,7 @@ mail:
   title: "Email"
   email: "thsh4hpublic@gmail.com"
 services:
+  # TODO: Update/Add new services and links
   - title: "Discord"
     link: "https://discord.com/"
     image: "images/contacts/discord-brands.svg"
