--- a/data/team.yml
+++ b/data/team.yml
@@ -41,4 +41,5 @@ members  :
   - image       : images/team/team-orange.jpg
     name        : JACOB FORRAY
     designation : Social Media Manager
+    instagram   : https://www.instagram.com/ja.forr/
     description : I’m Jacob Forray, social media manager for the Travis HS H4H club. I will be a Junior this year and play for the Travis Soccer team.
